# tobu

./: Cargo.toml  README.md
examples/: playground.rs
src/: de.rs  descriptor.rs  error.rs  info.rs  lib.rs  ser.rs
src/encoding/: error.rs  field.rs  mod.rs  wire.rs
src/encoding/tests/: mod.rs  test_field.rs  test_wire.rs
src/value/: mod.rs  number.rs
tests/: test.out  test.proto  test.rs  test.txt  test_de.rs
tobu/: Cargo.toml
tobu-format/: Cargo.toml
tobu-format/src/: lib.rs  wire.rs
tobu-format/src/tests/: test_field.rs  test_wire.rs
tobu-gen/: Cargo.toml
tobu-gen/src/: gen.rs  main.rs  parse.rs  process.rs
tobu-gen/src/google/protobuf/: descriptor.rs
tobu-gen/src/google/protobuf/compiler/: plugin.rs
tobu/src/: error.rs  info.rs
tobu/tests/: test_de.rs
