[package]
name = "tobu-format"
description = "A protobuf data format for serde with first class support for reflection"
version = "0.1.0"
edition = "2021"
authors = [
  "Andrew Guerrero <ajguerrer@gmail.com>"
]
documentation = "https://docs.rs/tobu-format"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ajguerrer/tobu"


[dependencies]
thiserror = "1"
bytes = "1"
