[package]
name = "tobu-gen"
description = "A protobuf data format for serde with first class support for reflection"
version = "0.1.0"
edition = "2021"
authors = [
  "Andrew Guerrero <ajguerrer@gmail.com>"
]
documentation = "https://docs.rs/tobu-gen"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ajguerrer/tobu"

[dependencies]
anyhow = "1"
clap = "2"
bytes = "1"
quote = "1"
proc-macro2 = "1"
heck = "0.3"

tobu-format = { path = "../tobu-format", version = "0.1.0" }
